# pipeline

./: ChangeLog.md  default.nix  pipeline.cabal  pipeline.nix
src/: Pipeline.hs
