name:                pipeline
version:             0.0.0.0
synopsis:            A pipeline service
homepage:            https://github.com/basvandijk/pipeline
license:             BSD3
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
copyright:           Bas van Dijk <v.dijk.bas@gmail.com>
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Pipeline
  build-depends:       base >=4.9 && <4.10, stm, stm-chans
  hs-source-dirs:      src
  default-language:    Haskell2010
